// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Date DateTimePicker 1`] = `
<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    className="rw-datetime-picker rw-widget"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    tabIndex="-1"
  >
    <div
      className="rw-widget-picker rw-widget-container"
    >
      <input
        aria-activedescendant={null}
        aria-describedby={undefined}
        aria-disabled={undefined}
        aria-expanded={false}
        aria-haspopup={true}
        aria-labelledby={undefined}
        aria-owns="rw_1_date rw_1_listbox"
        aria-readonly={undefined}
        autoComplete="off"
        autoFocus={undefined}
        className="rw-widget-input rw-input"
        disabled={undefined}
        id="rw_1_input"
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        placeholder={undefined}
        readOnly={undefined}
        role="combobox"
        tabIndex={0}
        type="text"
        value=""
      />
      <span
        className="rw-select rw-select-bordered"
      >
        <button
          aria-disabled={undefined}
          aria-label="Select date"
          className="rw-btn rw-btn-select"
          disabled={undefined}
          onClick={[Function]}
          tabIndex="-1"
          title="Select date"
          type="button"
        >
          <span
            aria-hidden="true"
            className="rw-i rw-i-calendar"
          />
        </button>
        <button
          aria-disabled={undefined}
          aria-label="Select time"
          className="rw-btn rw-btn-select"
          disabled={undefined}
          onClick={[Function]}
          tabIndex="-1"
          title="Select time"
          type="button"
        >
          <span
            aria-hidden="true"
            className="rw-i rw-i-clock-o"
          />
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Date LocalDatePicker 1`] = `
<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    className="rw-datetime-picker rw-widget"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    tabIndex="-1"
  >
    <div
      className="rw-widget-picker rw-widget-container"
    >
      <input
        aria-activedescendant={null}
        aria-describedby={undefined}
        aria-disabled={undefined}
        aria-expanded={false}
        aria-haspopup={true}
        aria-labelledby={undefined}
        aria-owns="rw_2_date"
        aria-readonly={undefined}
        autoComplete="off"
        autoFocus={undefined}
        className="rw-widget-input rw-input"
        disabled={undefined}
        id="rw_2_input"
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        placeholder={undefined}
        readOnly={undefined}
        role="combobox"
        tabIndex={0}
        type="text"
        value=""
      />
      <span
        className="rw-select rw-select-bordered"
      >
        <button
          aria-disabled={undefined}
          aria-label="Select date"
          className="rw-btn rw-btn-select"
          disabled={undefined}
          onClick={[Function]}
          tabIndex="-1"
          title="Select date"
          type="button"
        >
          <span
            aria-hidden="true"
            className="rw-i rw-i-calendar"
          />
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Date LocalMonthSelect 1`] = `
<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    aria-busy={undefined}
    aria-disabled={undefined}
    aria-expanded={false}
    aria-multiselectable={undefined}
    className="ui selection dropdown"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    role="listbox"
    tabIndex={0}
  >
    <div
      aria-live="polite"
      className="default text"
      role="alert"
    >
      Select Month
    </div>
    <i
      aria-hidden="true"
      className="dropdown icon"
      onClick={[Function]}
    />
    <div
      className="menu transition"
    >
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={true}
        className="selected item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          January
        </span>
      </div>
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          February
        </span>
      </div>
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          March
        </span>
      </div>
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          April
        </span>
      </div>
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          May
        </span>
      </div>
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          June
        </span>
      </div>
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          July
        </span>
      </div>
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          August
        </span>
      </div>
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          September
        </span>
      </div>
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          October
        </span>
      </div>
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          November
        </span>
      </div>
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          December
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Date MonthSelect 1`] = `
<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    aria-busy={undefined}
    aria-disabled={undefined}
    aria-expanded={false}
    aria-multiselectable={undefined}
    className="ui selection dropdown"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    role="listbox"
    tabIndex={0}
  >
    <div
      aria-live="polite"
      className="default text"
      role="alert"
    >
      Select Month
    </div>
    <i
      aria-hidden="true"
      className="dropdown icon"
      onClick={[Function]}
    />
    <div
      className="menu transition"
    >
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={true}
        className="selected item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          January
        </span>
      </div>
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          February
        </span>
      </div>
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          March
        </span>
      </div>
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          April
        </span>
      </div>
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          May
        </span>
      </div>
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          June
        </span>
      </div>
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          July
        </span>
      </div>
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          August
        </span>
      </div>
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          September
        </span>
      </div>
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          October
        </span>
      </div>
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          November
        </span>
      </div>
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          December
        </span>
      </div>
    </div>
  </div>
</div>
`;
